tests/format/misc/errors/js/import-assertions/invalid-assertions.mjs
import module foo from "./module.json" assert { type: "json" }
